Create spring-boot-health module
Issue: 46155